# lazy_engine

./: Cargo.toml
.zed/: debug.json
bonk/: Cargo.toml  README.md
bonk/shaders/: main.frag.spv  main.vert.spv
bonk/src/: gui.rs  main.rs  scene_renderer.rs  yakui_renderer.rs
bonk_gui/: Cargo.toml
bonk_gui/src/: lib.rs
component_registry/: Cargo.toml
component_registry/src/: lib.rs
demo_platformer/: Cargo.toml
demo_platformer/assets/: cube.glb
demo_platformer/prefabs/: cube.json
demo_platformer/scenes/: default.json
demo_platformer/src/: lib.rs
engine/: Cargo.toml
engine/src/: lib.rs
engine/src/sub_renderers/: scene_renderer.rs
engine_protocol/: Cargo.toml
engine_types/: Cargo.toml
engine_types/src/: component_registry.rs  components.rs  lib.rs
prefab_compiler/: Cargo.toml
prefab_compiler/src/: lib.rs
system_loader/: Cargo.toml
system_loader/src/: lib.rs
