[workspace]
members = [
    "bonk",
    "component_registry",
    "demo_platformer",
    "engine",
    "engine_protocol",
    "engine_types",
    "prefab_compiler",
]
resolver = "3"

[workspace.dependencies]
hecs = { version = "0.10" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winit = "0.30.12"
yakui = { git = "https://github.com/SecondHalfGames/yakui.git", rev = "797aeccbab1e269c88d0c39df8e6fe18ce21f97e", version = "0.3.0" }
yakui-vulkan = { git = "https://github.com/SecondHalfGames/yakui.git", rev = "797aeccbab1e269c88d0c39df8e6fe18ce21f97e", version = "0.3.0" }
yakui-winit = { git = "https://github.com/SecondHalfGames/yakui.git", rev = "797aeccbab1e269c88d0c39df8e6fe18ce21f97e", version = "0.3.0" }
