[workspace]
members = [
    "bonk",
    "bonk_gui",
    "component_registry",
    "demo_platformer",
    "engine",
    "engine_protocol",
    "engine_types",
    "prefab_compiler",
    "system_loader",
]
resolver = "3"

[workspace.dependencies]
libloading = "0.8"
anyhow.version = "1"
lazy_vulkan.path = "../lazy_vulkan"
clap = { version = "4", features = ["derive"] }
# hecs.path = "../hecs"
hecs.version = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
winit = "0.30.12"
glam = { version = "0.30.5", features = ["serde"] }
# yakui = { git = "https://github.com/SecondHalfGames/yakui.git", rev = "797aeccbab1e269c88d0c39df8e6fe18ce21f97e", version = "0.3.0" }
# yakui-vulkan = { git = "https://github.com/SecondHalfGames/yakui.git", rev = "797aeccbab1e269c88d0c39df8e6fe18ce21f97e", version = "0.3.0" }
# yakui-winit = { git = "https://github.com/SecondHalfGames/yakui.git", rev = "797aeccbab1e269c88d0c39df8e6fe18ce21f97e", version = "0.3.0" }
yakui.path = "../yakui/crates/yakui"
yakui-vulkan.path = "../yakui/crates/yakui-vulkan"
yakui-winit.path = "../yakui/crates/yakui-winit"
lazy_vulkan_gltf.path = "../lazy_vulkan_gltf"
yakui-shadcn.path = "../yakui-shadcn/yakui-shadcn"
bytemuck = "1"
git-version = "0.3"
log = "0.4"
env_logger = "0.11"
